# manybody

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md  TODO.md  build.py
.github/workflows/: ci.yml  format.yml
examples/: CMakeLists.txt  bose_hubbard_current_susceptibility_2d.cpp  hofstadter_localized_state.cpp  hubbard_1d_schriffer_wolff.cpp  hubbard_1d_schriffer_wolff_benchmark.cpp  hubbard_1d_schriffer_wolff_truncated.cpp  hubbard_3d_momentum_ground_state_real_space.cpp  hubbard_3d_momentum_lanczos_lowest.cpp  hubbard_3d_momentum_sparse_lowest.cpp  hubbard_3d_sparse_lowest.cpp  hubbard_block_rg_2d.cpp  hubbard_block_rg_2d_finite_t.cpp  hubbard_block_rg_3d.cpp  hubbard_block_rg_3d_finite_t.cpp  hubbard_exact_diagonalization.cpp  hubbard_majorana_conversion.cpp  hubbard_momentum_optical_conductivity.cpp  hubbard_momentum_optical_conductivity_2d.cpp  hubbard_momentum_optical_conductivity_factorized.cpp  hubbard_momentum_pair_size.cpp  hubbard_momentum_pair_size_2d.cpp  hubbard_momentum_sparse_lanczos.cpp  hubbard_relative3_ground_state_compare.cpp  hubbard_relative_block_wegner_flow.cpp  hubbard_relative_current.cpp  hubbard_relative_current_q.cpp  hubbard_relative_current_q_shared.cpp  hubbard_relative_current_q_shared.h  hubbard_relative_linear_operator.cpp  hubbard_relative_lowest_lanczos.cpp  hubbard_relative_operators.h  hubbard_relative_optical_conductivity.cpp  hubbard_relative_overlap.cpp  relative_basis_transform_example.cpp  sawtooth_cls_l1.cpp  ssh_topological_marker.cpp  ssh_topological_marker_obc.cpp  ssh_topological_marker_pbc.cpp  test_current_adjoint.cpp  test_relative_basis_transform.cpp  (+1 more)
scripts/: format.sh  make.sh  make_debug.sh  make_sanitize.sh  phase_diagram_scan.sh  phase_diagram_scan_3d.sh
src/: CMakeLists.txt  basis.cpp  basis.h  commutator.cpp  commutator.h  exp_operator.h  expression.cpp  expression.h  fourier_transform.h  index.h  indexed_hash_set.h  lanczos.h  linear_operator.h  linear_operator_utils.h  main.cpp  matrix_elements.h  normal_order.cpp  normal_order.h  operator.h  special_functions.h  static_vector.h  term.cpp  term.h
src/algebra/: basis.cpp  basis.h  canonicalize.h  commutator.cpp  commutator.h  expression.cpp  expression.h  expression_base.h  expression_map.h  fourier_transform.h  hubbard_model.h  hubbard_model_relative.h  matrix_elements.h  model.h  monomial.h  normal_order.cpp  normal_order.h  operator.h  reference_state.h  relative_basis_transform.h  statistics.h  term.cpp  term.h  term_utils.h  wick_decouple.h
src/algebra/boson/: basis.cpp  basis.h  expression.cpp  expression.h  term.cpp  term.h
src/algebra/boson/model/: hubbard_model.h  model.h  sawtooth_model.h
src/algebra/fermion/: basis.cpp  basis.h  expression.cpp  expression.h  fourier_transform.h  matrix_elements.h  relative_basis_transform.h  term.cpp  term.h
src/algebra/fermion/model/: hubbard_model.h  hubbard_model_momentum.h  hubbard_model_relative.h  model.h  ssh_model.h
src/algebra/hardcore_boson/: basis.h  expression.cpp  expression.h  term.h
src/algebra/majorana/: commutator.cpp  commutator.h  conversion.cpp  conversion.h  expression.cpp  expression.h  majorana_commutator.cpp  majorana_commutator.h  majorana_conversion.cpp  majorana_conversion.h  majorana_expression.cpp  majorana_expression.h  majorana_operator.h  majorana_string.cpp  majorana_string.h  operator.h  string.cpp  string.h
src/algebra/model/: hofstadter_tight_binding.h  hubbard_model.h  hubbard_model_momentum.h  hubbard_model_relative.h  kagome_tight_binding.h  model.h  sawtooth_tight_binding.h  ssh_model.h
src/algorithm/: diagonal_terms.cpp  diagonal_terms.h  dynamical_system.h  schriffer_wolff.cpp  schriffer_wolff.h  wegner_flow.cpp  wegner_flow.h
src/algorithms/: diagonal_terms.cpp  diagonal_terms.h  dynamical_system.h  l1_cls.h  optical_conductivity.cpp  optical_conductivity.h  schriffer_wolff.cpp  schriffer_wolff.h  static_susceptibility.h  wegner_flow.cpp  wegner_flow.h
src/algorithms/brg/: brg.h  brg_result.h  diagonalization.h  hubbard_block.h  thermal.h
src/models/: hubbard_model.h  hubbard_model_relative.h  model.h
src/numerics/: current_operator_fixed_k.h  evolve_state.h  exp_operator.h  hubbard_momentum_factorized.h  hubbard_momentum_factorized_fixed_k.h  hubbard_relative3_operators.h  hubbard_relative_operators.h  kpm.h  lanczos.h  linear_operator.h  linear_operator_utils.h  rescaling.h  topological_marker.h
src/utils/: arma_cereal.h  canonicalize_momentum.h  index.h  indexed_hash_set.h  stable_sort_with_parity.h  static_vector.h  tolerances.h  xxhash_impl.cpp
tests/: CMakeLists.txt  basis.h  basis_test.cpp  bessel_i.cpp  commutator.cpp  diagonal_terms.cpp  expression.cpp  fourier_transform.cpp  framework.h  index.cpp  indexed_hash_set.cpp  indexed_hash_set.h  lanczos.cpp  linear_operator.cpp  main.cpp  matrix_elements.cpp  model.cpp  normal_order.cpp  operator.cpp  schriffer_wolff.cpp  static_vector.cpp  term.cpp  wegner_flow.cpp
tests/algebra/: expression.cpp  fourier_transform.cpp  matrix_elements.cpp  model.cpp  term.cpp  test_basis.cpp  test_bose_hubbard_model.cpp  test_commutator.cpp  test_expression.cpp  test_expression_base.cpp  test_expression_map.cpp  test_fourier_transform.cpp  test_hardcore_boson.cpp  test_matrix_elements.cpp  test_model.cpp  test_normal_order.cpp  test_operator.cpp  test_operator_properties.cpp  test_relative_basis_transform.cpp  test_sawtooth_flatband.cpp  test_sawtooth_model.cpp  test_ssh_model.cpp  test_term.cpp  test_wick_decouple.cpp
tests/algorithms/: diagonal_terms.cpp  schriffer_wolff.cpp  test_diagonal_terms.cpp  test_dynamical_system.cpp  test_schriffer_wolff.cpp  test_wegner_flow.cpp  wegner_flow.cpp
tests/numerics/: test_current_operator_fixed_k.cpp  test_evolve_state.cpp  test_hubbard_momentum_factorized.cpp  test_hubbard_momentum_factorized_fixed_k.cpp  test_hubbard_relative3_operators.cpp  test_hubbard_relative_operators.cpp  test_kpm.cpp  test_lanczos.cpp  test_linear_operator.cpp  test_rescaling.cpp  test_topological_marker.cpp
tests/utils/: static_vector.cpp  test_arma_cereal.cpp  test_index.cpp  (+5 more)
(+327 files in other folders)
