function(add_example name)
    add_executable(${name} ${ARGN})
    target_link_libraries(${name} PRIVATE manybody)
endfunction()

add_example(example_hubbard_ed hubbard_exact_diagonalization.cpp)
add_example(example_hubbard_3d_sparse_lowest hubbard_3d_sparse_lowest.cpp)
add_example(example_hubbard_1d_schriffer_wolff hubbard_1d_schriffer_wolff.cpp)
add_example(example_hubbard_1d_schriffer_wolff_truncated hubbard_1d_schriffer_wolff_truncated.cpp)
add_example(example_hubbard_1d_schriffer_wolff_benchmark hubbard_1d_schriffer_wolff_benchmark.cpp)
add_example(example_tight_binding_fourier tight_binding_fourier.cpp)
add_example(example_hubbard_relative_linear_operator hubbard_relative_linear_operator.cpp)
add_example(example_hubbard_relative_overlap hubbard_relative_overlap.cpp)
add_example(example_hubbard_relative_lowest_lanczos hubbard_relative_lowest_lanczos.cpp)
add_example(example_hubbard_relative_block_wegner_flow hubbard_relative_block_wegner_flow.cpp)
add_example(example_hubbard_relative_current hubbard_relative_current.cpp)
add_example(example_hubbard_relative_current_q
    hubbard_relative_current_q.cpp
    hubbard_relative_current_q_shared.cpp)
add_example(example_hubbard_relative_optical_conductivity
    hubbard_relative_optical_conductivity.cpp
    hubbard_relative_current_q_shared.cpp)
