function(add_example name)
    add_executable(${name} ${ARGN})
    target_link_libraries(${name} PRIVATE manybody)
endfunction()

add_example(example_hubbard_1d_schriffer_wolff hubbard_1d_schriffer_wolff.cpp)
add_example(example_hubbard_1d_schriffer_wolff_benchmark hubbard_1d_schriffer_wolff_benchmark.cpp)
add_example(example_hubbard_1d_schriffer_wolff_truncated hubbard_1d_schriffer_wolff_truncated.cpp)
add_example(example_hubbard_3d_momentum_ground_state_real_space hubbard_3d_momentum_ground_state_real_space.cpp)
add_example(example_hubbard_3d_momentum_lanczos_lowest hubbard_3d_momentum_lanczos_lowest.cpp)
add_example(example_hubbard_3d_momentum_sparse_lowest hubbard_3d_momentum_sparse_lowest.cpp)
add_example(example_hubbard_3d_sparse_lowest hubbard_3d_sparse_lowest.cpp)
add_example(example_hubbard_block_rg_2d hubbard_block_rg_2d.cpp)
add_example(example_hubbard_ed hubbard_exact_diagonalization.cpp)
add_example(example_hubbard_momentum_optical_conductivity hubbard_momentum_optical_conductivity.cpp)
add_example(example_hubbard_momentum_optical_conductivity_2d hubbard_momentum_optical_conductivity_2d.cpp)
add_example(example_hubbard_momentum_optical_conductivity_factorized hubbard_momentum_optical_conductivity_factorized.cpp)
add_example(example_hubbard_momentum_pair_size hubbard_momentum_pair_size.cpp)
add_example(example_hubbard_momentum_pair_size_2d hubbard_momentum_pair_size_2d.cpp)
add_example(example_hubbard_momentum_sparse_lanczos hubbard_momentum_sparse_lanczos.cpp)
add_example(example_hubbard_relative3_ground_state_compare hubbard_relative3_ground_state_compare.cpp)
add_example(example_hubbard_relative_block_wegner_flow hubbard_relative_block_wegner_flow.cpp)
add_example(example_hubbard_relative_current hubbard_relative_current.cpp)
add_example(example_hubbard_relative_current_q hubbard_relative_current_q.cpp hubbard_relative_current_q_shared.cpp)
add_example(example_hubbard_relative_linear_operator hubbard_relative_linear_operator.cpp)
add_example(example_hubbard_relative_lowest_lanczos hubbard_relative_lowest_lanczos.cpp)
add_example(example_hubbard_relative_optical_conductivity hubbard_relative_optical_conductivity.cpp hubbard_relative_current_q_shared.cpp)
add_example(example_hubbard_relative_overlap hubbard_relative_overlap.cpp)
add_example(example_relative_basis_transform relative_basis_transform_example.cpp)
add_example(example_tight_binding_fourier tight_binding_fourier.cpp)
add_example(test_current_adjoint test_current_adjoint.cpp)
